// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item should display a selected item 1`] = `
<li
  className="theme-tc-enumeration-item theme-selected-item tc-enumeration-item selected-item"
  id="0-item"
>
  <button
    className="theme-tc-enumeration-item-label tc-enumeration-item-label btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      toto
    </span>
  </button>
  <div
    className="theme-tc-enumeration-item-actions tc-enumeration-item-actions theme-editable"
  />
</li>
`;

exports[`Item should display value with three buttons 1`] = `
<li
  className="theme-tc-enumeration-item tc-enumeration-item"
  id="0-item"
>
  <button
    className="theme-tc-enumeration-item-label tc-enumeration-item-label btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      toto
    </span>
  </button>
  <div
    className="theme-tc-enumeration-item-actions tc-enumeration-item-actions theme-editable"
  >
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
  </div>
</li>
`;
